gccida/g2/find_base_value
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1207:4: error: expected ';' after expression
rtx base_value; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1207:5: error: use of undeclared identifier 'base_value'
rtx base_value; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1208:4: error: expected ';' after expression
rtx v11; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1208:5: error: use of undeclared identifier 'v11'; did you mean 'v1'?
rtx v11; // rax 
    ^~~
    v1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1199:5: note: 'v1' declared here
rtx v1; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1257:12: error: expected ';' after expression
v3 = ( rtx)rtx[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1261:12: error: expected ';' after expression
v1 = ( rtx)rtx[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1266:1: error: use of undeclared identifier 'base_value'
base_value = find_base_value( rtx->fld[0].rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1267:6: error: use of undeclared identifier 'base_value'
if ( base_value ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1268:6: error: use of undeclared identifier 'base_value'
v1 = base_value; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1272:1: error: use of undeclared identifier 'v11'; did you mean 'v1'?
v11 = find_base_value( v3); 
^~~
v1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1199:5: note: 'v1' declared here
rtx v1; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1273:6: error: use of undeclared identifier 'v11'; did you mean 'v1'?
if ( v11 ) 
     ^~~
     v1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1199:5: note: 'v1' declared here
rtx v1; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1274:6: error: use of undeclared identifier 'v11'; did you mean 'v1'?
v3 = v11; 
     ^~~
     v1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1199:5: note: 'v1' declared here
rtx v1; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1299:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)v1[1]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/alias.c:1323:12: error: expected ';' after expression
v1 = ( rtx)v1[1]; 
           ^
           ;
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_base_value/src/obj/alias.o] Error 1
